2019-06-24:

- Remove math fixed point functions (internal)
- Support module operator for double/float (% and %=)
- Locals X and Y are double (mouse, process, scroll, and others)
- Increment regions to 256
- Add optional region to FADE, FADE_ON, FADE_OFF (last parameter)
- Change size, size_x and size_y to double
- Fix mouse.size_x and mouse.size_y
- Add UPTIME() as alias of GET_TIMER()
- Change parameters size_x and size_y in MAP_PUT to double
- Add global frame_info.frames_count
- Now COLLISION(...) is alias of COLLISION_BOX(...)

2019-06-23:

- Add PAUSE/RESUME

2019-06-20:

- Fix big textures issues
- Rename screen.full_screen to screen.fullscreen

2019-06-19:

- Add Pathfind
- Fix window issues in Windows
- Disable set_mode at startup
- For fullscreen mode don't use fake fullscreen that adjust to desktop resolution
- Fix screen_get() in scaled mode
- Add PNG_SAVE (ATENTION: USE IT ONLY FOR SCREEN_GET() OR MANUALLY MODIFIED/CREATED MAPS!!!)
- Add 32bits binaries version
- Add RGB, RGBA, RGB_GET and RGBA_GET for MAP
- rename VOLUME_SET to WAV_SET_VOLUME and VOLUME_SET_CHANNEL to CHANNEL_SET_VOLUME
- Fix transparence issues
- Add B_TRANSLUCENT and B_SBLEND
- Add Sustractive blend (but doesn't work as expected)
- Add G_DEPTH to MAP_INFO
- Fix blit when alpha is 0
- Add alpha opaque for returned bitmap from screen_get()
- Fix map_block_copy flags
- Fix screen_get()
- Fix cast and data type convertions
- Strings in SAVE are compatibles as BGD1
- Fix issue with variables already defined as "process" or "process type" identifier
- Change UNSIGNED INT return in some functions to INT
- Fix DBC windows/linux compatibility
- Fix transparence in 8bpp and 16bpp maps

2019-06-10:

- Add MAP_SET_PALETTE(fileid, graphid, first_color, ncolors, byte * RGBA_data )
      MAP_GET_PALETTE(fileid, graphid, first_color, ncolors, byte * RGBA_data )

    NOTE: Only works with 8 bits surfaces, when the texture is updated the changes made in texture are lost.